--- a/starrail/templates/index.html
+++ b/starrail/templates/index.html
@@ -6,8 +6,9 @@
 
 <main class="container">
     <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
-        <div class="col-lg-6 px-0">
+        <div class="img_contents">
             <h1 class="display-4 fst-italic">模擬宇宙の概要</h1>
+            <img src="{% static 'img/zpveWr9z4Pc5CO1HJhYQ1701311429-1701311742.gif' %}" width="40%" height="auto">
         </div>
     </div>
 
